shield jumping issue

--- a/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
+++ b/sites/all/modules/vsite/vsite_design/theme/vsite_design-shield-picker.css
@@ -1,5 +1,5 @@
 #cp-settings-shield {
-  width: 735px;
+  width: 675px;
   }
 
 #cp-settings-shield fieldset {
@@ -12,17 +12,18 @@
   height: 80px;
   border: 1px solid #ccc;
   text-align: center;
-  margin: 0 3px 3px 0;
+  margin: 2px;
   padding: 20px 0;
   cursor: pointer;
   }
 
 .shield-picker li.checked {
   border-color: red;
-  border-width: 2px;
-  width: 98px;
-  height: 78px;
-  margin-top: -1px;
+  border-width: 3px;
+  width: 96px;
+  height: 79px;
+  padding: 18px 0;
+  margin-bottom: -1px;
   }
 
 /*
